objects/Project_Finance_Checklist__c.object
<CustomObject>
    <description>A place for sales to store the project finance checklist and keep track of the project finance checklist approval process</description>
    <fields>
        <fullName>Initial_Term_Length__c</fullName>
        <inlineHelpText>Please enter the lease term length</inlineHelpText>
        <label>Initial Term Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_Project_Finance_Checklist__c</fullName>
        <description>link to project finance checklist that are used for approving opportunities</description>
        <inlineHelpText>Link from Box.com of associated project finance checklist</inlineHelpText>
        <label>Link to Project Finance Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The opportunity the checklist is associated with</description>
        <inlineHelpText>The opportunity the checklist is associated with</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Finance Checklists</relationshipLabel>
        <relationshipName>Project_Finance_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Final_Approver__c</fullName>
        <description>logs the actual approver of the project finance checklist</description>
        <inlineHelpText>Logs the actual approver of the project finance checklist. Filled in by approval process.</inlineHelpText>
        <label>Project Finance Final Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduced_Development_Spending_Cap__c</fullName>
        <description>only PF profile can edit the field, all others Read Only</description>
        <inlineHelpText>To be used for significant, non-standard contract terms, explanation to be provided in the &apos;Notes&apos; section</inlineHelpText>
        <label>Reduced Development Spending Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows the status of the approval process for the project finance checklist</description>
        <inlineHelpText>Current approval status of Project Finance Checklist</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_of_Additional_Option_Term_Lengths__c</fullName>
        <inlineHelpText>Please note, additional terms must have a unilateral exercise right</inlineHelpText>
        <label>Total of Additional Option Term Lengths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Finance Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Project Finance Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Finance Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>